src/objects/Redo_Surgery_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Redo Surgery Forms</relationshipLabel>
        <relationshipName>Redo_Surgery_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biological_Complication_Other__c</fullName>
        <label>Biological Complication Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biological_Complication__c</fullName>
        <label>Biological Complication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Osseointegration failure</fullName>
                </value>
                <value>
                    <fullName>Peri-implant mucositis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bone_Graft_Material_Other__c</fullName>
        <label>Bone Graft Material Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bone_Graft_Material__c</fullName>
        <label>Bone Graft Material</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autograft</fullName>
                </value>
                <value>
                    <fullName>Allograft</fullName>
                </value>
                <value>
                    <fullName>Xenograft</fullName>
                </value>
                <value>
                    <fullName>rhBMP</fullName>
                </value>
                <value>
                    <fullName>Collagen Plug</fullName>
                </value>
                <value>
                    <fullName>Gelfoam</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Redo Surgery Forms</relationshipLabel>
        <relationshipName>Redo_Surgery_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Redo Surgery Forms</relationshipLabel>
        <relationshipName>Redo_Surgery_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Graft_Failure_Reason_Other__c</fullName>
        <label>Graft Failure Reason Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graft_Failure_Reason__c</fullName>
        <label>Graft Failure Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graft Mobility</fullName>
                </value>
                <value>
                    <fullName>Infection</fullName>
                </value>
                <value>
                    <fullName>Lesions</fullName>
                </value>
                <value>
                    <fullName>Loss of Material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graft_Failure_Site__c</fullName>
        <label>Graft Failure Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graft_Failure__c</fullName>
        <label>Graft Failure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Failure__c</fullName>
        <label>Implant Failure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Tooth_Position__c</fullName>
        <label>Implant Tooth Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mechanical_Complication_Other__c</fullName>
        <label>Mechanical Complication Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mechanical_Complication__c</fullName>
        <label>Mechanical Complication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implant Fracture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redo_Type_Other__c</fullName>
        <label>Redo Type Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redo_Type__c</fullName>
        <label>Redo Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maxillary Arch</fullName>
                </value>
                <value>
                    <fullName>Mandibular Arch</fullName>
                </value>
                <value>
                    <fullName>S/M</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rerelate__c</fullName>
        <label>Rerelate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Redo Surgery Form</label>
    <nameField>
        <displayFormat>RSFN-{0000}</displayFormat>
        <label>Redo Surgery Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redo Surgery Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>